Font info correction

--- a/UFO sourse/Frenchpress One.ufo/fontinfo.plist
+++ b/UFO sourse/Frenchpress One.ufo/fontinfo.plist
@@ -28,7 +28,7 @@
   <key>openTypeNameDesigner</key>
   <string>Yaroslava Sadomova &amp; Jovanny Lemonad</string>
   <key>openTypeNameDesignerURL</key>
-  <string>http://www.typetype.ru</string>
+  <string>http://www.typetype.ru/</string>
   <key>openTypeNameLicense</key>
   <string>This Font Software is licensed under the SIL Open Font License, Version 1.1. This license is available with a FAQ at: http://scripts.sil.org/OFL</string>
   <key>openTypeNameLicenseURL</key>
@@ -36,7 +36,7 @@
   <key>openTypeNameManufacturer</key>
   <string>Yaroslava Sadomova &amp; Jovanny Lemonad</string>
   <key>openTypeNameManufacturerURL</key>
-  <string>http://www.typetype.ru</string>
+  <string>http://www.typetype.ru/</string>
   <key>openTypeNameDescription</key>
   <string>Copyright (c) 2015 by Yaroslava Sadomova &amp; Jovanny Lemonad. All rights reserved.</string>
   <key>openTypeNameSampleText</key>
